Fix header button being too low

--- a/static/sass/_header.sass
+++ b/static/sass/_header.sass
@@ -13,7 +13,7 @@
         font-size: 90%
 
 .header-btn
-    margin-top: 1.35vh
+    margin-top: 0.9vh
 
 @media (max-width: 480px)
     .header-btn
